--- a/pagina web alejandro.html
+++ b/pagina web alejandro.html
@@ -80,7 +80,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 
 
-<p>title: “mi página web” author: “Alejandro Mendoza” format: html: toc: true toc-location: left number-sections: true embed-resources: true output-file: index editor_options: chunk_output_type: console</p>
+<p>title: “mi página web” author: “Alejandro Mendoza” format: html: toc: true toc-location: left number-sections: true embed-resources: true output-file: index</p>
 <hr>
 <section id="quarto" class="level2">
 <h2 class="anchored" data-anchor-id="quarto">Quarto</h2>
